Change validation method 	modified:   AdminIncludes/module_configuration.html 	modified:   Config/config.xml 	new file:   Constraints/BIC.php 	new file:   Constraints/BICValidator.php 	modified:   Controller/SetTransferConfig.php 	modified:   Form/ConfigureTransfer.php 	modified:   I18n/en_US.php 	modified:   I18n/fr_FR.php 	deleted:    Loop/GetRegex.php 	modified:   Model/ConfigInterface.php 	modified:   Model/TransferPaymentConfig.php 	modified:   README.md 	modified:   TransferPayment.php

--- a/AdminIncludes/module_configuration.html
+++ b/AdminIncludes/module_configuration.html
@@ -1,3 +1,9 @@
+{if isset($smarty.get.errmes) && !empty($smarty.get.errmes)}
+     <div class="alert alert-danger">
+         {$smarty.get.errmes}
+     </div>
+{/if}
+
 <div class="general-block-decorator">
     <div class="col-md-12">
         <ul id="tabbed-menu" class="nav nav-tabs">
@@ -30,17 +36,17 @@
                                     {$label}
                                 </label>
 
-                                <input type="text" class="form-control" required name="{$name}" id="{$label_attr.for}" pattern="{loop name="find.regex.iban" type="transfer.get.regex" ref="iban"}{$REGEX}{/loop}" value="{$value}"/>
+                                <input type="text" class="form-control" required name="{$name}" id="{$label_attr.for}" value="{$value}"/>
                             </div>
                             {/form_field}
 
-                            {form_field form=$form field="swift"}
+                            {form_field form=$form field="bic"}
                             <div class="form-group {if $error}has-error{/if}">
                                 <label for="{$label_attr.for}">
                                     {$label}
                                 </label>
 
-                                <input type="text" class="form-control" required name="{$name}" id="{$label_attr.for}" pattern="{loop name="find.regex.swift" type="transfer.get.regex" ref="swift"}{$REGEX}{/loop}" value="{$value}"/>
+                                <input type="text" class="form-control" required name="{$name}" id="{$label_attr.for}" value="{$value}"/>
                             </div>
                             {/form_field}
 
