fix ui configuration

--- a/AdminIncludes/module_configuration.html
+++ b/AdminIncludes/module_configuration.html
@@ -4,7 +4,7 @@
      </div>
 {/if}
 
-<div class="general-block-decorator">
+<div class="row general-block-decorator">
     <div class="col-md-12">
         <ul id="tabbed-menu" class="nav nav-tabs">
             <li class="active"><a data-toggle="tab" href="#configure_account">{intl l="BIC configuration"}</a></li>
