Changes for Thelia 2.5 compatibility

--- a/AdminIncludes/module_configuration.html
+++ b/AdminIncludes/module_configuration.html
@@ -19,7 +19,7 @@
                             {intl l="Enter your BIC information"}
                         </div>
                         <div class="panel-body">
-                            {form name="transfer.configure.bic"}
+                            {form name="configure_transfer_payment"}
                                 {form_hidden_fields form=$form}
                                 {form_field form=$form field="name"}
                                 <div class="form-group {if $error}has-error{/if}">
