--- a/AdminIncludes/module_configuration.html
+++ b/AdminIncludes/module_configuration.html
@@ -51,6 +51,8 @@
                                 </div>
                                 {/form_field}
 
+                            {render_form_field form=$form field="sendEmail"}
+
                             <div class="form-group">
                                 <button type="submit" name="save_mode" value="stay" class="form-submit-button btn btn-sm btn-default btn-success" title="{intl l='Save changes'}">{intl l='Save changes'} <span class="glyphicon glyphicon-ok"></span></button>
                             </div>
